# execution-specs-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  init.sh  quick_test.py
.github/workflows/: mdbook.yml
mdbook/: .gitignore  book.toml
mdbook/src/: SUMMARY.md  chapter_1_intro.md
pytran/: Cargo.toml
pytran/src/: main.rs  pytran.rs
rust-execution-specs/: Cargo.toml  Cargo.toml.bk
rust-execution-specs/src/: lib.rs
rust-execution-specs/src/ethereum/: base_types.rs  ethash.rs  exceptions.rs  genesis.rs  mod.rs  rlp.rs
rust-execution-specs/src/ethereum/frontier/: bloom.rs  fork.rs  fork_types.rs  mod.rs  state.rs  trie.rs
rust-execution-specs/src/ethereum/frontier/vm/: exceptions.rs  gas.rs  interpreter.rs  memory.rs  mod.rs  runtime.rs  stack.rs
rust-execution-specs/src/ethereum/frontier/vm/instructions/: arithmetic.rs  bitwise.rs  block.rs  comparison.rs  control_flow.rs  environment.rs  keccak.rs  log.rs  memory.rs  mod.rs  stack.rs  storage.rs  system.rs
rust-execution-specs/src/ethereum/frontier/vm/precompiled_contracts/: ecrecover.rs  identity.rs  mapping.rs  mod.rs  ripemd160.rs  sha256.rs
rust-execution-specs/src/ethereum/utils/: byte.rs  ensure.rs  hexadecimal.rs  mod.rs  numeric.rs  safe_arithmetic.rs
rust-execution-specs/src/ethereum_spec_tools/: forks.rs  mod.rs  sync.rs
rust-execution-specs/tests/: fixtures  mod.rs  test_genesis.rs  test_rlp.rs
rust-execution-specs/tests/frontier/: mod.rs  test_trie.rs
src/ethereum/: exceptions.rs  genesis.rs  mod.rs
tests/: test_genesis.rs  test_rlp.rs
(+10 files in other folders)
