[package]
name = "rust-execution-specs"
version = "0.1.0"
edition = "2021"

[dependencies]
hex-literal = "0.4.1"
num-bigint = { version = "0.4.3" }
serde = { version = "1.0.162" }
serde_json = "1.0.96"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
python-parser = "0.2.0"
num-traits = "0.2.15"
