[package]
name = "execution-specs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
hex-literal = "0.4.1"
num-bigint = { version = "0.4.3" }
serde = { version = "1.0.162" }
serde_json = "1.0.96"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
num-traits = "0.2.15"
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }

[[bin]]
name = "sync"
path = "src/ethereum_spec_tools/sync.rs"
